kubernetes/base/db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: voting-app
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: voting-app
  ports:
  - port: 5432
    name: db
  clusterIP: None
