kubernetes/base/redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: queue
    app.kubernetes.io/part-of: voting-app
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: voting-app
  ports:
  - port: 6379
    name: redis
  clusterIP: None
